[package]
name = "pallet-creditcoin"
version = "2.0.0-beta.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

description = 'FRAME pallet template for defining custom runtime logic.'
authors = ['Gluwa Inc.', 'Nathan Whitaker <nathan.whitaker@gluwa.com>']
homepage = 'https://creditcoin.org'
license = 'Unlicense'
publish = false

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
log = "0.4.17"
extend = "1.1.2"
ethabi = { version = "17.0.0", features = ["rlp"], default-features = false }
ethereum-types = { version = "0.13.1", features = [
    "rlp",
    "serialize",
], default-features = false }
serde = { version = "1.0.137", features = ["derive"], default-features = false }
serde_json = { version = "1.0.80", features = [
    "alloc",
], default-features = false }
hex = { version = "0.4.3", features = ["alloc"], default-features = false }
lexical = { version = "6.1.0", features = [
    "write-integers",
], default-features = false }
sha2 = { version = "0.10.2", default-features = false }
libsecp256k1 = { version = "0.7.0", default-features = false, features = [
    "hmac",
    "static-context",
] }
base58 = "0.2.0"
bitcoin-bech32 = { version = "0.12.1", git = "https://github.com/nathanwhit/rust-bech32-bitcoin", default-features = false, branch = "no-std" }

[dependencies.codec]
default-features = false
features = ['derive']
package = "parity-scale-codec"
version = "3.1.2"

[dependencies.frame-benchmarking]
default-features = false
git = "https://github.com/paritytech/substrate.git"
optional = true

branch = "polkadot-v0.9.19"

[dependencies.frame-support]
default-features = false
git = "https://github.com/paritytech/substrate.git"

branch = "polkadot-v0.9.19"

[dependencies.frame-system]
default-features = false
git = "https://github.com/paritytech/substrate.git"

branch = "polkadot-v0.9.19"

[dependencies.sp-std]
default-features = false
git = "https://github.com/paritytech/substrate.git"

branch = "polkadot-v0.9.19"

[dependencies.sp-runtime]
default-features = false
git = "https://github.com/paritytech/substrate.git"

branch = "polkadot-v0.9.19"

[dependencies.sp-core]
default-features = false
git = "https://github.com/paritytech/substrate.git"

branch = "polkadot-v0.9.19"

[dependencies.sp-io]
default-features = false
git = "https://github.com/paritytech/substrate.git"

branch = "polkadot-v0.9.19"

[dependencies.pallet-balances]
default-features = false
git = "https://github.com/paritytech/substrate.git"

branch = "polkadot-v0.9.19"

[dependencies.pallet-timestamp]
default-features = false
git = "https://github.com/paritytech/substrate.git"

branch = "polkadot-v0.9.19"

[dependencies.scale-info]
default-features = false
features = ['derive']
version = "2.1.1"

[dev-dependencies]
bstr = { version = "0.2.17", default-features = false }
parking_lot = "0.12.0"
tracing-test = { version = "0.2.1", git = "https://github.com/nathanwhit/tracing-test", branch = "main" }
tracing = "0.1.34"
assert_matches = "1.5.0"

[dev-dependencies.sp-keystore]
default-features = false
git = "https://github.com/paritytech/substrate.git"

branch = "polkadot-v0.9.19"

[dev-dependencies.sp-tracing]
default-features = false
git = "https://github.com/paritytech/substrate.git"

branch = "polkadot-v0.9.19"

[dev-dependencies.sp-core]
default-features = false
git = "https://github.com/paritytech/substrate.git"

branch = "polkadot-v0.9.19"

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
    'codec/std',
    'scale-info/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
    'pallet-balances/std',
    'pallet-timestamp/std',
    'sp-core/std',
    'serde/std',
    'serde_json/std',
    'hex/std',
]
try-runtime = ['frame-support/try-runtime']
