[package]
name = 'pallet-difficulty'
version = '2.0.0-beta.5'
description = 'FRAME pallet for dynamic difficulty adjustment.'
authors = ['Gluwa Inc.', 'Nathan Whitaker <nathan.whitaker@gluwa.com>']
edition = '2018'
license = 'Unlicense'
publish = false
repository = 'https://github.com/gluwa/creditcoin-substrate'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
log = "0.4.16"

[dependencies.primitives]
default-features = false
path = "../../primitives"

[dependencies.sp-arithmetic]
default-features = false
git = 'https://github.com/nathanwhit/substrate.git'
branch = 'creditcoin'


[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '3.1.0'

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/nathanwhit/substrate.git'
optional = true
branch = 'creditcoin'


[dependencies.frame-support]
default-features = false
git = 'https://github.com/nathanwhit/substrate.git'
branch = 'creditcoin'


[dependencies.frame-system]
default-features = false
git = 'https://github.com/nathanwhit/substrate.git'
branch = 'creditcoin'


[dependencies.scale-info]
default-features = false
features = ['derive']
version = '2.0'

[dev-dependencies.sp-core]
default-features = false
git = 'https://github.com/nathanwhit/substrate.git'
branch = 'creditcoin'


[dev-dependencies.sp-io]
default-features = false
git = 'https://github.com/nathanwhit/substrate.git'
branch = 'creditcoin'


[dev-dependencies.sp-runtime]
default-features = false
git = 'https://github.com/nathanwhit/substrate.git'
branch = 'creditcoin'


[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
    'codec/std',
    'scale-info/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
    'sp-arithmetic/std',
]
try-runtime = ['frame-support/try-runtime']
