[package]
name = 'pallet-difficulty'
version = '2.0.0-beta.6'
description = 'FRAME pallet for dynamic difficulty adjustment.'
authors = ['Gluwa Inc.', 'Nathan Whitaker <nathan.whitaker@gluwa.com>']
edition = '2021'
license = 'Unlicense'
publish = false
repository = 'https://github.com/gluwa/creditcoin-substrate'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
log = "0.4.17"

[dependencies.primitives]
default-features = false
version = "2.0.0-beta.6"
path = "../../primitives"

[dependencies.sp-arithmetic]
default-features = false
git = "https://github.com/paritytech/substrate.git"

branch = "polkadot-v0.9.19"

[dependencies.codec]
default-features = false
features = ['derive']
package = "parity-scale-codec"
version = "3.1.2"

[dependencies.frame-benchmarking]
default-features = false
git = "https://github.com/paritytech/substrate.git"
optional = true

branch = "polkadot-v0.9.19"

[dependencies.sp-std]
default-features = false
git = "https://github.com/paritytech/substrate.git"

branch = "polkadot-v0.9.19"

[dependencies.frame-support]
default-features = false
git = "https://github.com/paritytech/substrate.git"

branch = "polkadot-v0.9.19"

[dependencies.frame-system]
default-features = false
git = "https://github.com/paritytech/substrate.git"

branch = "polkadot-v0.9.19"

[dependencies.scale-info]
default-features = false
features = ['derive']
version = "2.1.1"

[dev-dependencies.sp-core]
default-features = false
git = "https://github.com/paritytech/substrate.git"

branch = "polkadot-v0.9.19"

[dev-dependencies.sp-io]
default-features = false
git = "https://github.com/paritytech/substrate.git"

branch = "polkadot-v0.9.19"

[dev-dependencies.sp-runtime]
default-features = false
git = "https://github.com/paritytech/substrate.git"

branch = "polkadot-v0.9.19"

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
    'codec/std',
    'scale-info/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
    'sp-arithmetic/std',
]
try-runtime = ['frame-support/try-runtime']
